--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
     <h1 class="logo">
     <img src="logo.png" class="logo-image">
     Hyperacusis Guide</h1>
+<div class="border">
 <button id="hamburger" aria-label="Menu">
   <span></span>
   <span></span>
   <span></span>
 </button>
+</div>
   </header>
 
   <nav id="sidebar">
@@ -70,10 +72,12 @@
 
         <div class="centered-text"><span class="custom-font"><i>First, do no harm</i></span><br><span class="thomas">- Hippocrates</span></div>
 
-      <h1>Precautionary Guide for New Hyperacusis Patients</h1>
+
 
       <p>
-        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound will worsen hyperacusis symptoms. Many new hyperacusis sufferers often turn to platforms like Reddit, where the majority of the advice they receive encourages continued exposure to everyday sounds with the expectation that their symptoms will improve, and warns that avoiding or isolating from sound may cause their symptoms to worsen. Sadly, this is usually the same advice newly affected patients will receive from doctors, audiologists, and clinicians, who generally lack experience in managing hyperacusis.
+        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound leads to worsening of hyperacusis symptoms ─ a narrative that has been pushed since <a class="link" href="" target="_blank" rel="noopener noreferrer">Jastreboff et al. published a textbook on tinnitus retraining therapy (TRT) in 2004</a>. 
+        </p>
+        <p>Many new hyperacusis sufferers often turn to online platforms like Reddit, where the majority of the advice they receive encourages continued exposure to everyday sounds with the expectation that their symptoms will improve, and warns that avoiding or isolating from sound may cause their symptoms to worsen. Unfortunately, this is usually the same advice newly affected patients will receive from doctors, audiologists, and clinicians, who generally lack experience in managing hyperacusis.
       </p>
 
       <p>
@@ -81,19 +85,18 @@
       </p>
 
 
-
-      <h2>Purpose</h2>
+      <h1>Precautionary Guide for New Hyperacusis Patients</h1>
       <p>
-        This guide outlines what we believe is the most effective course of action for individuals newly affected by hyperacusis. It reflects our experience and observations, aiming to help stabilize symptoms, prevent worsening, and provide the best chance for improvement and recovery.
+        This guide outlines what we believe is the most effective course of action for individuals newly affected by hyperacusis. It reflects our experience and observations, aiming to help stabilize symptoms, prevent worsening, ensure accurate diagnosis and treatment, and provide the best chance for improvement.
       </p>
 
       <h2>Important Note</h2>
       <p>
-        This protocol offers cautionary guidance based on firsthand evidence that sound exposure can worsen symptoms, 
+        This protocol offers cautionary guidance based on evidence that sound exposure can worsen hyperacusis symptoms, 
         and is designed to support recovery in the most effective way possible. Most individuals improve over time, 
         gradually discovering safe sound levels tailored to their sensitivities. Many eventually relax certain limitations 
         once stability is achieved. 
-        We believe that taking extra precautions early on helps to preserve the potential for improvement later, whereas insufficient caution early on can result in severe, long-term limitations.
+        We believe that taking extra precautions early on increases the likelihood for improvement later, whereas insufficient caution early on can result in severe, long-term limitations.
       </p>
 
       <p>
@@ -110,9 +113,9 @@
       </p>
 
       <p>
-        While these measures may appear extreme, and some online or medical advice may suggest the opposite, hyperacusis and 
-        related conditions remain poorly understood. Many individuals with severe symptoms report wishing they had adopted 
-        these precautions earlier. Taking careful measures early on is far more preferable than enduring irreversible consequences later.
+      These measures may seem extreme, and both online sources and many health professionals often advise the opposite.  However, hyperacusis and related conditions remain very poorly understood in the medical community. 
+        Many individuals with severe symptoms report wishing they had adopted 
+        these precautions earlier. Taking careful measures early on is far better than enduring irreversible consequences later.
       </p>
       
       <h2>1. Controlled, Predictable Sound Environment</h2>
@@ -121,7 +124,7 @@
         <li>Eliminate sudden, unpredictable noises (door slams, kitchen clatter, TV/radio, etc.).</li>
         <li>Avoid any sound that causes pain, burning, flare-ups, or worsening of symptoms, even if it is not "loud" by normal standards.</li>
       </ul>
-
+      
       <h2>2. Protective Equipment Use</h2>
       <ul>
         <li>If outside of your safe home environment (especially when driving or riding in a vehicle):</li>
