--- a/tinnitus.html
+++ b/tinnitus.html
@@ -221,6 +221,7 @@ outcomes can vary and that rigorous, large-scale studies supporting its efficacy
       <li>May improve sleep quality, concentration, and overall daily functioning.</li>
       <li>Often combined with sound therapy, relaxation techniques, and lifestyle adjustments.</li>
       <li>Delivered individually, in groups, or via online programs and guided self-help materials.</li>
+      <a id="jastreboff"></a>
       <li>Focuses on long-term habituation and reducing the perceived impact of tinnitus and hyperacusis on daily life.</li>
       <li>Evidence shows CBT can significantly reduce tinnitus-related distress even if the perceived sound remains unchanged.</li>
     </ul>
