--- a/medications.html
+++ b/medications.html
@@ -90,7 +90,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
   </p>
 
   <h2>
-  Summary of medications
+  Summary of Medications
   </h2>
 
   <ul>
