--- a/tinnitus.html
+++ b/tinnitus.html
@@ -37,12 +37,12 @@
     <h1 class="logo">
     <img src="logo.png" class="logo-image">
     Hyperacusis Guide</h1>
-<div class="border">
-<button id="hamburger" aria-label="Menu">
-  <span></span>
-  <span></span>
-  <span></span>
-</button>
+<div class="border" id="hamburger-wrapper">
+  <button id="hamburger" aria-label="Menu">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
 </div>
   </header>
 
