--- a/medications.html
+++ b/medications.html
@@ -82,6 +82,8 @@
   </p>
   <p>
     Other medications, including tricyclic antidepressants (TCAs), serotonin-norepinephrine reuptake inhibitors (SNRIs), and anticonvulsants have been used with variable results.
+   </p>
+   <p>
     Most antidepressants (SSRIs, SNRIs, and tricyclics) work by increasing serotonin signaling, typically by blocking its reuptake so more of the neurotransmitter remains active in the synapse. With long-term use, the brain adapts to this heightened serotonin activity by adjusting receptor sensitivity and neurotransmitter balance. When the medication is reduced or stopped, serotonin function can temporarily fall below normal, leading to a withdrawal phase sometimes called antidepressant discontinuation syndrome (ADS). During this period, people may experience symptoms such as anxiety, low mood, irritability, dizziness, “brain zaps,” and sleep disturbances as the serotonin system gradually re-stabilizes. To minimize these effects, antidepressants are usually tapered gradually under medical supervision rather than stopped abruptly.
     </p>
     <p>
@@ -133,7 +135,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
   </p>
   <p>
   Although clomipramine is typically introduced at a low dose, it often must be titrated to doses exceeding 200 mg per day before any meaningful improvement in symptoms is observed, which increases the likelihood of adverse effects.
-  <i>Some patients have reported fewer side effects and less pronounced changes in tinnitus when using the sustained-release formulation of clomipramine</i>.
+  <i>Some patients have reported fewer side effects and less pronounced changes in tinnitus when using the sustained-release formulation of clomipramine, which is not sold in the United States, but it can be prepared by a licensed compounding pharmacy</i>.
   </p>
   <p>
   <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Please refer to the spreadsheet</a> which provides numerous patient reports on clomipramine use, including information on dosage, effectiveness, and side effects.
