--- a/patch.html
+++ b/patch.html
@@ -76,26 +76,38 @@
 
       <p>
         Tympanic membrane paper patching is a minimally invasive procedure that has been explored 
-        as a treatment for hyperacusis. Paper patching was originally developed to treat perforations of the tympanic membrane and to promote faster healing after a myringotomy. More recently, it has been used as a potential treatment for hyperacusis, with the general consensus suggesting it can improve sound sensitivity by approximately 10–20%.
+        as a treatment and diagnostic tool for hyperacusis. Paper patching was originally developed to treat perforations of the tympanic membrane and to promote faster healing after a myringotomy. More recently, it has been used as a potential treatment for hyperacusis, with most patients reporting 10-20% improvement in sound sensitivity after paper patching. 
       </p>
       <p>
         The technique 
-        involves placing a <strong>small piece of sterile paper, cigarette paper, or similar thin material 
+        involves placing a <strong>small piece of sterile paper</strong>, <strong>cigarette paper</strong>, or <strong>similar thin material 
         over the tympanic membrane</strong> to slightly stiffen the eardrum and reduce its vibratory response 
         to incoming sound waves. By dampening eardrum movement, the paper patch may help lessen the 
         mechanical transmission of sound energy to the ossicles and inner ear, thereby reducing 
         loudness perception and discomfort. 
       </p>
       <p>
-        Some patients have reported immediate or gradual improvement 
+        Some patients have reported improvement 
         in sound tolerance following the procedure, with minimal risks or complications. In certain cases, 
         the patch is used as a diagnostic tool ─ if it provides temporary relief, more permanent options 
-        such as cartilage reinforcement or Silverstein round/oval window reinforcement may be considered. 
+        such as cartilage reinforcement of the tympanic membrane or Silverstein round/oval window reinforcement may be considered. 
       </p>
       <p>
         Although clinical data are limited, tympanic membrane patching is valued for its simplicity, 
-        reversibility, and potential to provide relief for patients with mechanically mediated hyperacusis 
-        or noxacusis-like pain linked to middle ear hypersensitivity.
+        reversibility, and potential to provide relief for patients with hyperacusis and noxacusis. 
+      </p>
+      <p>
+      <div class="image-row">
+  <img src="images/paper_patch_1.jpg" alt="Image 1">
+  <img src="images/paper_patch_2.jpg" alt="Image 2">
+      </div>
+      </p>
+      <P>
+      The images above show placement of paper patches on the tympanic membrane. The image on the left shows a single patch covering the inferior half, while the image on the right shows two patches covering the superior half.
+      These images are from a <a class="link" href="documents/boedts.pdf" target="_blank" rel="noopener noreferrer">2014 article by Dr. Michael Boedts</a>, which discusses the use of tympanic membrane paper patching to alleviate symptoms of patulous Eustachian tube syndrome. 
+      </p>
+      <p>
+      A <a class="link" href="https://hyperacusiscentral.org/boedts-interview/" target="_blank" rel="noopener noreferrer">recent interview with Dr. Boedts is available on Hyperacusis Central</a>, in which he discusses paper patching, Botox, and local anesthesia (bupivacaine), and how these approaches can be used to treat pain hyperacusis.
       </p>
             <p>
       <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a>
