--- a/tinnitus.html
+++ b/tinnitus.html
@@ -236,21 +236,28 @@ outcomes can vary and that rigorous, large-scale studies supporting its efficacy
       <div class="page-break" aria-hidden="true"></div>
       <h1>On Dr. Pawel Jastreboff</h1>
 <p>
-  Tinnitus Retraining Therapy (TRT) was first introduced in 1993 by Dr. Pawel Jastreboff and Dr. Jonathan Hazell, based on Jastreboff's <a class="link" href="documents/jastreboff.pdf" target="_blank" rel="noopener noreferrer">neurophysiological model of tinnitus</a> published in 1990. His 2004 textbook, 
-  <a class="link" href="https://www.amazon.com/Tinnitus-Retraining-Therapy-Implementing-Neurophysiological/dp/0521088372" target="_blank" rel="noopener noreferrer"><i>Tinnitus Retraining Therapy: Implementing the Neurophysiological Model</i></a>
-  (co-authored with Jonathan W. P. Hazell), outlined the principles of TRT and helped 
+  Tinnitus Retraining Therapy (TRT) was first introduced in 1993 by Dr. Pawel Jastreboff and Dr. Jonathan Hazell, based on Jastreboff's <a class="link" href="documents/jastreboff.pdf" target="_blank" rel="noopener noreferrer">neurophysiological model of tinnitus</a> published in 1990. Their 2004 textbook, 
+  <a class="link" href="https://www.amazon.com/Tinnitus-Retraining-Therapy-Implementing-Neurophysiological/dp/0521088372" target="_blank" rel="noopener noreferrer"><i>Tinnitus Retraining Therapy: Implementing the Neurophysiological Model</i></a>, outlined the principles of TRT and helped 
   popularize the neurophysiological model, but its clinical effectiveness remains scientifically unproven and <a class="link" href="https://jamanetwork.com/journals/jamaotolaryngology/fullarticle/2734346" target="_blank" rel="noopener noreferrer">lacks conclusive supporting evidence</a>.
 </p>
 
 <p>
-In 2014, <a class="link" href="documents/isolation.pdf" target="_blank" rel="noopener noreferrer">Jastreboff et al. published an article</a> in which they explicitly state that protecting from sound may worsen symptoms of hyperacusis. An excerpt from the article reads:
+In 2014, <a class="link" href="documents/isolation.pdf" target="_blank" rel="noopener noreferrer">Drs. Pawel and Margaret Jastreboff published an article</a> which explicitly states that protecting from sound exposure leads to worsening of hyperacusis symptoms. The authors write:
 </p>
 
 <ul>
 <p class="quote">
 
 <i>
-"There are very limited data in the literature on the results of hyperacusis treatment. According to anecdotal reports, treatment has taken two opposite directions. The most common approach is to advise patients to avoid sound and use ear protection. This approach is based on the reasoning that because patients became sensitive to sound, they are <strong>supposedly</strong> more susceptible to sound exposure and consequently require extra protection. Patients readily embrace this advice and begin to protect their ears, even to the extent of using earplugs in quiet environments. <strong>Unfortunately, this well-intended approach makes the auditory system even more sensitive to sound and further exacerbates hyperacusis</strong>.
+"There are very limited data in the literature on the results of hyperacusis treatment. According to anecdotal reports, treatment has taken two opposite directions. The most common approach is to advise patients to avoid sound and use ear protection. This approach is based on the reasoning that because patients became sensitive to sound, they are supposedly more susceptible to sound exposure and consequently require extra protection. Patients readily embrace this advice and begin to protect their ears, even to the extent of using earplugs in quiet environments. <strong>Unfortunately, this well-intended approach makes the auditory system even more sensitive to sound and further exacerbates hyperacusis</strong>.
+</p>
+<p>
+  <div class="warning">
+  <strong>Attention</strong>  
+     <ul>
+    <li>The final sentence in the paragraph above was written as if it were a fact, but it is not supported by scientific evidence and should be regarded as a theory. In our opinion, this theory is flawed, and we do not believe that protecting from sound exposure is harmful.</li>
+    </ul>
+  </div>
 </p>
 <p class="quote">
 
