--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -176,7 +176,7 @@ In our opinion, <strong>noxacusis represents a more severe manifestation of hype
     </ul>
   </div>
   <div class="row5 bottom">
-  <strong>Catastrophic</strong>  
+  <strong>Extremely Severe</strong>  
      <ul>
     <li>Encompasses everything in the severe category, but at a level beyond in both intensity and susceptibility to worsening.</li>
     <li>Symptoms can be worsened by things as simple as whispering, eating, running water, or flushing toilets even in protection.</li>
