--- a/silverstein.html
+++ b/silverstein.html
@@ -142,17 +142,17 @@ Locating a specialist qualified to perform the Silverstein Procedure can be chal
        <ul>
        <li><strong>United States:</strong></li>
        <ul>
-            <li><a class="link" href="https://www.earrf.org/drherbertsilverstein" target="_blank" rel="noopener noreferrer">Dr. Herbert Silverstein, MD</a> ─ Sarasota, FL</li>
-            <li><a class="link" href="https://smhfpg.com/doctors/nayak-neil-s-md/" target="_blank" rel="noopener noreferrer">Dr. Neil Nayak, MD</a> ─ Sarasota, FL</li>
-            <li><a class="link" href="https://michiganear.com/our-physicians/dennis-i-bojrab-m-d/" target="_blank" rel="noopener noreferrer">Dr. Dennis Bojrab Sr., MD</a> ─ Farmington Hills, MI</li>
-            <li><a class="link" href="https://www.entspecialistspc.com/physicians/dr-matthew-farrugia/" target="_blank" rel="noopener noreferrer">Dr. Matthew Farrugia, DO</a> ─ Novi, MI</li>
-            <li><a class="link" href="https://doctors.intermountainhealth.org/provider/jonathan-l-hatch/2555758" target="_blank" rel="noopener noreferrer">Dr. Jonathan Hatch, MD</a> ─ Murray, UT</li>
-            <li><a class="link" href="https://www.txhealthcare.com/providers/marc-dean-md/" target="_blank" rel="noopener noreferrer">Dr. Mark Dean, MD</a> ─ Fort Worth, TX</li>
-            <li><a class="link" href="https://www.theearcenter.com/about/" target="_blank" rel="noopener noreferrer">Dr. Ronen Nazarian, MD</a> ─ Beverly Hills, CA</li>
+            <li><a class="link" href="https://www.earrf.org/drherbertsilverstein" target="_blank" rel="noopener noreferrer">Dr. Herbert Silverstein, MD</a> ─ Sarasota, FL (possibly retired)</li>
+            <li><a class="link" href="https://smhfpg.com/doctors/nayak-neil-s-md/" target="_blank" rel="noopener noreferrer">Dr. Neil Nayak, MD</a> ─ Sarasota, FL (offers video consult)</li>
+            <li><a class="link" href="https://michiganear.com/our-physicians/dennis-i-bojrab-m-d/" target="_blank" rel="noopener noreferrer">Dr. Dennis Bojrab Sr., MD</a> ─ Farmington Hills, MI (offers video consult)</li>
+            <li><a class="link" href="https://www.entspecialistspc.com/physicians/dr-matthew-farrugia/" target="_blank" rel="noopener noreferrer">Dr. Matthew Farrugia, DO</a> ─ Novi, MI (does not offer video consult)</li>
+            <li><a class="link" href="https://doctors.intermountainhealth.org/provider/jonathan-l-hatch/2555758" target="_blank" rel="noopener noreferrer">Dr. Jonathan Hatch, MD</a> ─ Murray, UT (does not offer video consult)</li>
+            <li><a class="link" href="https://www.txhealthcare.com/providers/marc-dean-md/" target="_blank" rel="noopener noreferrer">Dr. Mark Dean, MD</a> ─ Fort Worth, TX (offers video consult)</li>
+            <li><a class="link" href="https://www.theearcenter.com/about/" target="_blank" rel="noopener noreferrer">Dr. Ronen Nazarian, MD</a> ─ Beverly Hills, CA (offers video consult)</li>
         </ul>
         <li><strong>Belgium:</strong></li>
         <ul>
-            <li><a class="link" href="https://www.mariamiddelares.be/en/physicians/michael-boedts" target="_blank" rel="noopener noreferrer">Dr. Michael Boedts</a> ─ Ghent, BE</li>
+            <li><a class="link" href="https://www.mariamiddelares.be/en/physicians/michael-boedts" target="_blank" rel="noopener noreferrer">Dr. Michael Boedts</a> ─ Ghent, BE (offers video consult)</li>
         </ul>
         </ul>
 
