--- a/tinnitus.html
+++ b/tinnitus.html
@@ -255,7 +255,7 @@ In 2014, <a class="link" href="documents/isolation.pdf" target="_blank" rel="noo
   <div class="warning">
   <strong>Attention</strong>  
      <ul>
-    <li>The final sentence in the paragraph above was written as if it were a fact, but it is not supported by scientific evidence and should be regarded as a theory. In our opinion, this theory is flawed, and we do not believe that protecting from sound exposure is harmful.</li>
+    <li>The closing sentence in the paragraph above was written as if it were a fact, but it is not supported by scientific evidence and should be regarded as a theory. In our opinion, this theory is flawed, and we do not believe that protecting from sound exposure is harmful.</li>
     </ul>
   </div>
 </p>
