--- a/medications.html
+++ b/medications.html
@@ -124,7 +124,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
   <ul>
       <li><strong>Hyperacusis symptoms are mild or absent:</strong> Patients are able to carry out normal daily activities, can usually continue working a quiet job, and can tolerate normal environmental sounds without fear of a permanent setback, though some require the use of hearing protection. Aural fullness is generally mild or absent in these individuals.<i><ul>Based on our knowledge, no patients who are truly catastrophic and homebound have reported meaningful improvement in their symptoms after taking clomipramine.</ul></i></li>
       <li><strong>No permanent setbacks:</strong> Patients may have a temporary setback from exposing to sound above their tolerance threshold, but return to their previous baseline after a period of rest.</li>
-    <li><strong>Neuralgia-related pain:</strong> Almost all of these patients complain of neuralgia-related pain, frequently a burning sensation that radiates from around the ear into the face and head. </li>
+    <li><strong>Neuropathic pain (neuralgia):</strong> Almost all of these patients complain of pain that would be most consistent with neuralgia, frequently a burning sensation that radiates from around the ear into the face and head. True loudness hyperacusis and noxacusis patients usually complain of more focused pain that localizes to the middle ear (deep to the tympanic membrane).</li>
 
   </ul>
   <p>
@@ -135,7 +135,7 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
   </p>
   <p>
   Although clomipramine is typically introduced at a low dose, it often must be titrated to doses exceeding 200 mg per day before any meaningful improvement in symptoms is observed, which increases the likelihood of adverse effects.
-  <i>Some patients have reported fewer side effects and less pronounced changes in tinnitus when using the sustained-release formulation of clomipramine, which is not sold in the United States, but it can be prepared by a licensed compounding pharmacy</i>.
+  <i>Some patients have reported fewer side effects and less pronounced changes in tinnitus when using the sustained-release (SR) formulation of clomipramine. The original version of clomipramine is available in the United States, but the sustained-release version is not and must either be purchased from an international pharmacy or prepared at a compounding pharmacy, which are available in most states</i>.
   </p>
   <p>
   <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Please refer to the spreadsheet</a> which provides numerous patient reports on clomipramine use, including information on dosage, effectiveness, and side effects.
@@ -185,6 +185,35 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
       Please refer to the <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">spreadsheet</a> for detailed reports from patients treated with TVP Botox, including the number of units administered, effectiveness, and side effects.
       </p>
 
+       <div class="page-break" aria-hidden="true"></div>
+      <h1>Sphenopalatine Ganglion (SPG) Block</h1>
+
+    <p>
+    The sphenopalatine ganglion (SPG) block is a minimally invasive procedure in which medication is delivered to the sphenopalatine ganglion (a parasympathetic nerve bundle located behind the nasal cavity) to interrupt pain and autonomic signaling. The block may be performed using a soft transnasal applicator saturated with anesthetic, a catheter-based delivery system (syringe attached to a thin catheter that is guided through the nasal cavity), or in some cases a needle introduced under endoscopic or fluoroscopic guidance. 
+    </p>
+    <p>
+    Most commonly, clinicians use a local anesthetic such as lidocaine or the longer-acting bupivacaine. The procedure has traditionally been used for migraine, facial pain, and autonomic disorders, but it has more recently been explored as a potential treatment for hyperacusis and noxacusis because of its ability to modulate trigeminal activity, middle-ear muscle tension, and sound-evoked neuropathic pain.
+    </p>
+    <p>
+    In some practices, a corticosteroid (such as triamcinolone or dexamethasone) is added to the anesthetic in an effort to extend the therapeutic effect. While steroids do not produce a true long-term nerve block like radiofrequency ablation, they may prolong symptom relief beyond the duration of local anesthesia alone, which typically lasts only a few hours. Evidence for SPG blocks in hyperacusis and noxacusis remains limited, but some patients report short-term reductions in auditory pain and improved sound tolerance following the procedure.
+    </p>
+    <p>
+    The video below demostrations a technique for targeting the sphenopalatine ganglion (SPG) using a needle under fluoroscopic guidance. The SPG can also be accessed with a needle using a transnasal endoscopic approach (not shown here).
+    </p>
+    <p>
+          <video width="640" height="360" class="video-crop" controls poster="images/spg_block.jpg">
+  <source src="video/spg_block.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+    <p>
+    The main advantage of using a needle is that anesthesia or steroids can be delivered directly to the SPG and surrounding tissues, whereas the cotton swab and catheter methods (shown below) only apply anesthesia to the mucosa overlying the ganglion.
+    </p>
+
+      <div class="image-row">
+  <img src="images/spg_swab.png" alt="Image 1">
+  <img src="images/spg_catheter.jpg" alt="Image 2">
+      </div>
 
     </article>
 <a href="#top" class="back-to-top" aria-label="Back to top"></a>
