--- a/medications.html
+++ b/medications.html
@@ -201,11 +201,13 @@ Overall, pharmacologic treatments remain largely experimental, should be individ
     The video below demostrations a technique for targeting the sphenopalatine ganglion (SPG) using a needle under fluoroscopic guidance. The SPG can also be accessed with a needle using a transnasal endoscopic approach (not shown here).
     </p>
     <p>
+    <div class="video-container">
           <video width="640" height="360" class="video-crop" controls poster="images/spg_block.jpg">
   <source src="video/spg_block.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-
+</div>
+</p>
     <p>
     The main advantage of using a needle is that anesthesia or steroids can be delivered directly to the SPG and surrounding tissues, whereas the cotton swab and catheter methods (shown below) only apply anesthesia to the mucosa overlying the ganglion.
     </p>
