--- a/patch.html
+++ b/patch.html
@@ -102,7 +102,7 @@
       </p>
       <P>
       The images above show placement of paper patches on the tympanic membrane. The image on the left shows a single patch covering the inferior half of the eardrum, while the image on the right shows two patches covering the superior half.
-      The images are from a <a class="link" href="documents/boedts.pdf" target="_blank" rel="noopener noreferrer">2014 article by Dr. Michael Boedts</a>, which discusses the use of tympanic membrane paper patching to alleviate symptoms of patulous Eustachian tube syndrome. 
+      The images are from a <a class="link" href="documents/boedts.pdf" target="_blank" rel="noopener noreferrer">2014 article published by Dr. Michael Boedts</a>, which discusses the use of tympanic membrane paper patching to alleviate symptoms of patulous Eustachian tube syndrome. 
       </p>
       <p>
       A <a class="link" href="https://hyperacusiscentral.org/boedts-interview/" target="_blank" rel="noopener noreferrer">recent interview with Dr. Boedts is available on Hyperacusis Central</a>, in which he discusses paper patching, Botox, local anesthesia (bupivacaine), and how these approaches can be used to treat pain hyperacusis.
